@@ -1,4 +1,6 @@
 1.3.1
+Added: Config to blacklist mob extra health by dimension (main/mob/health/Dimension Blacklist) (#37)
+Added: Config for difficulty change on boss kills (main/difficulty/Difficulty Per Boss Kill) (#42)
 Added: Color setting for the new health text. GREEN_TO_RED mode (default) displays green at full health and moves to red as you take damage. WHITE is just white. PSYCHEDELIC lets you taste the rainbow.
 
 1.3.0
